# chatrpgv4

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTENT_LICENSES.md  LICENSE  README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.zralph/: story-director-tasks.md
checks/: coC7_rule_checklist.md  exhaustive_rulebook_validator.py  rulebook-monster-attacks-ref.json  rulebook-monsters-ref.json  rulebook-occupations-ref.json  rulebook-skills-ref.json  rulebook-spell-mechanics-ref.json  rulebook-spells-ref.json  rulebook-tomes-ref.json  rulebook-weapons-ref.json
docs/: coc7-rulebook-coverage-audit.md  glm-pi-rpc-setup.md  live-playtest-notes.md  rulebook-abstraction-paradigm.md  ruleset-contract.md
runtime/: README.md
scripts/: apply_cognitive_storylets_narration_patch.py  apply_epistemic_boundary_hardening.py  apply_epistemic_docs_completion.py  apply_epistemic_lifecycle_v2_patch.py  apply_epistemic_metrics_scope_patch.py  apply_epistemic_report_patch.py  apply_epistemic_review_patch.py  apply_epistemic_v1_patch.py  apply_source_evidence_compile_patch.py  build_tomes_from_ocr.py  build_weapons_from_ocr.py  cache_all_ocr.sh  e2e_smoke_test.py  fix_epistemic_fixture_hashes.py  fix_epistemic_sidecar_shape.py  gap_audit.py  normalize_weapon_damage_types.py  sync_coc_plugin_copy.py  verify_bout_tables_ocr.py  verify_monster_san_ocr.py  verify_monsters_ocr.py  verify_occupations_ocr.py  verify_phobias_manias_ocr.py  verify_poisons_ocr.py  verify_skills_ocr.py  verify_spells_ocr.py  verify_tomes_ocr.py  (+1 more)
web/: README.md
(+894 files in other folders)
