[project]
name = "chatrpgv4"
version = "0.4.0a0"
description = "Canonical COC Keeper plugin and headless runtime workspace"
requires-python = "==3.14.6"
dependencies = []

[dependency-groups]
dev = [
  "jsonschema>=4.26,<5",
  "pytest>=9.1.1,<10",
]

[tool.uv]
package = false
required-version = "==0.11.16"
